# Cheat-Engine-Mcp

./: .gitignore  CMakeLists.txt  README.md  package.json  pyproject.toml
docs/: DEBUG_BREAKPOINT_VISIBILITY_FIX_2026-03-08.md  INSTALL_PREBUILT_WINDOWS.md  LIBHAT_SIGSCAN_REWRITE_2026-03-08.md  LIVE_USAGE_REVIEW_2026-03-08.md  MINECRAFT_LIVE_AUDIT_2026-03-08.md  TIMEOUT_AND_PARALLEL_EXECUTION_REWRITE_2026-03-08.md  TROUBLESHOOTING.md
native/: CMakeLists.txt
native/include/ce_mcp/: config.hpp  core_api.h  core_runtime.hpp  mcp_client.hpp  plugin_loader.hpp
native/src/core/: core_exported_tools.cpp  core_exports.cpp  core_lua_tools.cpp  core_memory_tools.cpp  core_process_tools.cpp  core_runtime.cpp  core_runtime_internal.hpp  core_support.cpp  exported_field_catalog.inc  mcp_client.cpp
native/src/loader/: ce_mcp_plugin.cpp  plugin_loader.cpp
python/src/ce_mcp_server/: bridge.py  context.py  errors.py  registration.py  server.py
python/src/ce_mcp_server/runtime/: debug_runtime.py  dissect_runtime.py  lua_runtime.py  pointer_runtime.py  process_runtime.py  scan_runtime.py  structure_runtime.py  table_runtime.py
python/src/ce_mcp_server/tools/: __init__.py  address_tools.py  common.py  debug_tools.py  exported_tools.py  lua_library_tools.py  memory_tools.py  native_tools.py  pointer_tools.py  process_tools.py  record_tools.py  scan_helper_tools.py  scan_tools.py  script_tools.py  structure_tools.py  table_tools.py
releases/v0.2.5/: README.md  SHA256SUMS.txt
releases/v0.2.7/: README.md  SHA256SUMS.txt
releases/v0.2.8/: README.md  SHA256SUMS.txt
releases/v0.2.9/: README.md  SHA256SUMS.txt
tests/: live_support.py  test_bridge.py  test_error_payloads.py  test_live_runner_support.py  test_live_tool_surface.py  test_server.py  test_support.py  test_tool_surface.py
tests/assets/dotnet_target/: DotNetTarget.csproj  Program.cs
tools/dev/: benchmark-live-tools.py  demo_mcp_server.py  deploy-loader.ps1  invoke-ce-mcp.ps1  live_runner_support.py  plugin-control.ps1  restart-cheat-engine.ps1  run-live-tool-suite.py  run-mcp-call.py  update-core.ps1
tools/release/: package-release.ps1  release-notes-v0.2.0.md  release-notes-v0.2.5.md  release-notes-v0.2.7.md  release-notes-v0.2.8.md  release-notes-v0.2.9.md
